tests/unit-fail-compilation/j022b.c
int main(void) {
      register int a[5] = {0};
      a;
      return 0;
}
